snapshot WIP commit for header not properly centering on mobile issue.
Another WIP commit for header not properly centering on mobile issue.

WIP commit for angular header centering on mobile refactor.

Commit for react header centering on mobile refactor. Also, fixes a bug where the HeaderNav custom css was applied to wrong element.

React Header docs snippet updated.

React Header docs fixed.

--- a/agnostic-angular/apps/examples/src/app/app.component.css
+++ b/agnostic-angular/apps/examples/src/app/app.component.css
@@ -10,3 +10,28 @@ h1, h2, h3,
 section {
   margin-bottom: 2rem;
 }
+
+/**
+ * Header Examples
+ */
+.header-flex-fill {
+  flex-grow: 0;
+}
+.header-flex-fill {
+  margin-inline-start: 0;
+}
+
+.header-mbe16 {
+  margin-inline-end: 0;
+}
+
+@media (min-width: 970px) {
+  .header-flex-fill {
+    flex-grow: 1;
+    margin-inline-start: var(--fluid-16)
+  }
+  
+  .header-mbe16 {
+    margin-inline-end: var(--fluid-16);
+  }
+}
